# TMU-bot

./: CHANGELOG.md  LICENSE  tmu-bot.cabal
app/: Main.hs
config/: hat_guy
config/tmu-bot/: config.json
