cabal-version:   3.0
name:            tmu-bot
version:         0.1.0.0
license:         MIT
license-file:    LICENSE
author:          Jade
maintainer:      Nils.Jadefalke@gmail.com
category:        Game
build-type:      Simple
extra-doc-files: CHANGELOG.md

common warnings
    ghc-options: -Wall

executable tmu-bot
    import:           warnings
    main-is:          Main.hs
    build-depends:    base ^>=4.19.1.0, discord-haskell, text
    hs-source-dirs:   app
    default-language: GHC2021
