cabal-version:   3.0
name:            tmu-bot
version:         0.1.0.0
license:         MIT
license-file:    LICENSE
author:          Jade
maintainer:      Nils.Jadefalke@gmail.com
category:        Game
build-type:      Simple
extra-doc-files: CHANGELOG.md

common warnings
    ghc-options: -Wall

executable tmu-bot
    import:           warnings
    main-is:          Main.hs
    build-depends:    base ^>=4.19.1.0,
                      aeson >= 2.2.3 && < 2.3,
                      transformers >= 0.6.1 && < 0.7,
                      filepath >= 1.4.200 && < 1.5,
                      text >= 2.1.1 && < 2.2,
                      discord-haskell >= 1.17.0 && < 1.18,
                      xdg-basedir >= 0.2.2 && < 0.3,
    hs-source-dirs:   app
    default-language: GHC2021
